--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,3 +45,19 @@ blockquote{
 .block{
 	display:block;
 }
+
+ul.quoteTags{
+	margin-left: 0px;
+	margin-top:5px; 
+	display: inline-block;
+	padding-left: 0px;
+	
+}
+ ul.quoteTags li:first-child{
+	/*background: #000!important;*/
+	margin-left:0px;
+}
+
+ul.quoteTags > li{
+	margin-left: 8px;
+}
